feat: auth token route, handler and DB logic
